# opainject_macos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm64.h  arm64.m  dyld.h  dyld.m  entitlements.plist  index.md  main.m  rop_inject.h  rop_inject.m  sandbox.h  task_utils.h  task_utils.m  thread_utils.h
